--- a/style.css
+++ b/style.css
@@ -184,6 +184,11 @@ table {
   margin: 0 auto;
 }
 
+.wrapper2 {
+  max-width: 1354px;
+  margin: 0 auto;
+}
+
 body {
   font-family: var(--font-family);
   color: #3c3c3b;
@@ -507,6 +512,8 @@ h2 {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 30px;
+  padding-left: 7px;
+  padding-right: 7px;
 }
 
 .section__top button {
@@ -519,4 +526,469 @@ h2 {
   border: none;
 }
 
+.tabs-slider__nav {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 13px;
+  list-style: none;
+  padding: 0;
+  margin-bottom: 30px;
+  padding-left: 7px;
+  padding-right: 7px;
+}
+
+.tabs-slider__tab-button {
+  padding: 14px 29px;
+  border: 1px solid #fff;
+  background-color: #fff;
+  border-radius: 12px;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
+  color: #424242;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.tabs-slider__tab-button--active {
+  background: #67bec1;
+  color: #fff;
+  border-color: #67bec1;
+}
+
+.tabs-slider__panel {
+  display: none;
+}
+
+.tabs-slider__panel--active {
+  display: block;
+}
+
+.doctor-card__photo {
+  min-height: 294px;
+}
+
+.doctor-card {
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 0 8px 1px rgba(0, 0, 0, 0.1);
+}
+
+.swiper {
+  padding: 7px;
+}
+
+.doctor-card__info {
+  padding: 20px 24px;
+}
+
+.doctor-card__name {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 140%;
+  text-transform: uppercase;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.doctor-card__specialty {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 143%;
+  color: #67bec1;
+}
+
+.doctor-card__specialty-cont {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3px;
+}
+
+.doctor-card__experience {
+  font-family: var(--third-family);
+  font-weight: 400;
+  font-size: 16px;
+  color: #424242;
+}
+
+.doctor-card__reviews {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  margin-top: 8px;
+  color: #67bec1;
+}
+
+.doctor-card__reviews span {
+  font-family: var(--third-family);
+  font-weight: 400;
+  font-size: 16px;
+  color: #67bec1;
+}
+
+.doctor-card__actions {
+  display: flex;
+  align-items: center;
+}
+
+.doctor-card__btn {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 100%;
+  text-align: center;
+  color: #fff;
+  flex: 1;
+  border: 1px solid #fff;
+  border-radius: 8px;
+  padding: 18px 0;
+  background: #67bec1;
+}
+
+.doctor-card__link {
+  flex: 1;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 100%;
+  text-align: center;
+  color: #000;
+  border-radius: 8px;
+  padding: 18px;
+  text-decoration: none;
+}
+
+.doctor-card__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 250px;
+  gap: 20px;
+}
+
+.swiper-button-next:after,
+.swiper-rtl .swiper-button-prev:after {
+  content: none;
+}
+
+.swiper-button-prev:after,
+.swiper-rtl .swiper-button-next:after {
+  content: none;
+}
+
+.tabs-slider__panel {
+  position: relative;
+}
+
+.usl {
+  padding: 100px 0;
+  background: #fff;
+}
+
 /* doctors end */
+
+/* usl start */
+
+.usl__grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 16px;
+}
+
+.usl__grid a {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 125%;
+  color: #000;
+  border-radius: 20px;
+  background: url("./images/doc.png");
+  text-decoration: none;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  min-height: 287px;
+  display: flex;
+  align-items: flex-end;
+  padding: 24px;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  transition: all ease 0.5s;
+}
+
+.usl__grid a::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.45);
+  opacity: 1;
+  transition: opacity 0.3s ease;
+  z-index: -1;
+}
+
+.usl__grid a:hover {
+  color: #fff;
+}
+
+.usl__grid a:hover::before {
+  opacity: 0;
+}
+
+.usl__grid :nth-last-child(2),
+.usl__grid :last-child {
+  grid-column: span 2;
+}
+
+/* usl end */
+
+/* preim start */
+
+.preim {
+  background: #f8f8fa;
+  padding: 100px 0;
+}
+
+.preim__cont {
+  display: flex;
+  gap: 63px;
+}
+
+.preim-grid {
+  flex: 2;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 16px;
+}
+
+.preim-grid > :not(:last-child) {
+  background: #fff;
+  padding: 27px 24px;
+}
+
+.preim-grid > :not(:last-child) h3 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 125%;
+  color: #000;
+  margin-bottom: 8px;
+  margin-top: 17px;
+}
+
+.preim-grid > :not(:last-child) p {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 143%;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.preim-grid div {
+  border-radius: 20px;
+}
+
+.preim-bg {
+  flex: 1;
+  background: url("./images/preim-bg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 20px;
+}
+
+.preim-grid > :last-child {
+  background: #67bec1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 24px;
+}
+
+/* preim end */
+
+/* reviews start */
+
+.reviews {
+  padding: 100px 0;
+}
+
+.review-card__header {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 20px;
+  margin-bottom: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.review-card__header-div img {
+  width: 100%;
+  width: 48px;
+  height: 48px;
+  border-radius: 100%;
+}
+
+.review-card__header-div {
+  display: flex;
+  gap: 12px;
+}
+
+.review-card__author > :first-child {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 114%;
+  color: #000;
+}
+
+.review-card__author > :last-child {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 140%;
+  color: #8a8a8a;
+}
+
+.review-card__author {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+.review-card {
+  background: #f8f8fa;
+  padding-bottom: 20px;
+  overflow: hidden;
+  border-radius: 20px;
+  padding-top: 40px;
+}
+
+.review-card__source img {
+  max-width: 86px;
+}
+
+.review-card__text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 160%;
+  color: rgba(0, 0, 0, 0.8);
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  margin-bottom: 30px;
+  padding-left: 40px;
+  padding-right: 40px;
+  min-height: 128px;
+}
+
+.review-card__doctor-label {
+  display: block;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 160%;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.review-card__doctor-link {
+  font-weight: 500;
+  font-size: 14px;
+  text-align: center;
+  color: #19815a;
+  border-radius: 12px;
+  padding: 14px 20px;
+  background: #dbf3f1;
+  text-decoration: none;
+  line-height: 100%;
+  display: inline-block;
+  margin-top: 4px;
+  margin-bottom: 28px;
+}
+
+.review-card__date {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 140%;
+  color: #8a8a8a;
+}
+
+.review-card__footer {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.reviews .tabs-slider__tab-button {
+  background: #f8f8fa;
+  border: 1px solid #f8f8fa;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.reviews .tabs-slider__tab-button--active {
+  background: #67bec1;
+  border: 1px solid #67bec1;
+}
+
+/* reviews end */
+
+/* rating start */
+
+.rating__cont-block {
+  display: flex;
+  gap: 118px;
+  margin-top: 40px;
+}
+
+.rating__cont-block__first img {
+  width: 100%;
+}
+
+.rating__cont-block__first {
+  flex: 1;
+}
+
+.rating__cont-last {
+  flex: 4.6;
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+}
+
+.rating {
+  background: #f8f8fa;
+  padding: 100px 0;
+}
+
+.rating-item {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 20px;
+  background: #fff;
+  padding: 24px;
+}
+
+.stars-flex {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  margin-bottom: 16px;
+}
+
+.stars-flex p {
+  font-weight: 600;
+  font-size: 26px;
+  line-height: 120%;
+  text-align: right;
+  color: #000;
+}
+
+.rev-count {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 120%;
+  text-align: right;
+  color: #000;
+}
+
+/* rating end */
