--- a/style.css
+++ b/style.css
@@ -1535,3 +1535,163 @@ h2 {
 }
 
 /* footer end */
+
+/* popup-header start */
+
+.header {
+  position: relative;
+}
+
+.nav-menu__dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  width: 1340px;
+  background-color: #ffffff;
+  z-index: 999;
+  margin: 0 auto;
+  border-radius: 12px;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-10px);
+  padding: 46px 40px;
+  transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s;
+}
+
+.nav-menu__item.--dropdown-active .nav-menu__dropdown {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+
+.nav-menu__dropdown-container-usl {
+  display: flex;
+}
+
+.usl-1 {
+  padding-right: 40px;
+  border-right: 1px solid #dadada;
+}
+
+.usl-1 h3 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 140%;
+  color: #67bec1;
+  margin-bottom: 24px;
+}
+
+.usl-1 a {
+  display: block;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 140%;
+  color: #3c3c3b;
+  padding: 10px 14px;
+  text-decoration: none;
+  border-radius: 12px;
+  transition: background ease 0.6s;
+}
+
+.usl-1 a:hover {
+  background: rgba(103, 190, 193, 0.2);
+}
+
+.usl-2 {
+  padding-left: 40px;
+}
+
+.usl-2 h3 {
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 140%;
+  color: #000;
+  margin-bottom: 24px;
+}
+
+.usl-2 a {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  color: #000;
+  display: block;
+  text-decoration: none;
+  transition: all ease 0.6s;
+}
+
+.usl-2 a:hover {
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.usl-2 ul li:not(:last-child) {
+  margin-bottom: 12px;
+}
+
+.nav-menu__dropdown-container-2 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 140%;
+  color: #67bec1;
+}
+
+.nav-menu__dropdown-container-2 input {
+  width: 100%;
+  outline: none;
+  border: 1px solid #c0c0c0;
+  border-radius: 12px;
+  padding: 19px 25px;
+  margin-top: 24px;
+  margin-bottom: 32px;
+}
+
+.nav-menu__dropdown-container-2 input,
+.nav-menu__dropdown-container-2 input::placeholder {
+  font-weight: 500;
+  font-size: 16px;
+  color: #424242;
+}
+
+.header-grid-item {
+  display: flex;
+}
+
+.header-grid-item > :first-child p {
+  font-weight: 600;
+  font-size: 24px;
+  text-align: center;
+  color: #67bec1;
+}
+
+.header-grid-item > :first-child {
+  padding-right: 12px;
+  border-right: 1px solid rgba(103, 190, 193, 0.2);
+}
+
+.header-grid-item a {
+  font-weight: 500;
+  font-size: 16px;
+  color: #000;
+  text-decoration: none;
+}
+
+.header-grid-item > :last-child {
+  padding-left: 12px;
+}
+
+
+.header-grid {
+  column-count: 4; 
+  column-gap: 20px; 
+}
+
+
+.header-grid-item {
+  break-inside: avoid;
+  padding-bottom: 24px; 
+}
+
+
+
+/* popup-header end */
