--- a/style.css
+++ b/style.css
@@ -1907,3 +1907,49 @@ h2 {
 }
 
 /* чекбокс end */
+
+/* дропдаун подвала */
+
+.footer-nav__link--toggle {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.footer-nav__toggle-icon {
+  transition: transform 0.3s ease;
+}
+
+.footer-nav__sublist {
+  list-style: none;
+  margin: 0;
+
+  max-height: 0;
+  overflow: hidden;
+  visibility: hidden;
+  transition: max-height 0.4s ease-out, visibility 0.4s, padding 0.4s ease-out;
+}
+
+.footer-nav__item.--is-open .footer-nav__sublist {
+  max-height: 500px;
+  visibility: visible;
+  padding-top: 12px;
+}
+
+.footer-nav__item.--is-open .footer-nav__toggle-icon {
+  transform: rotate(180deg);
+}
+
+.footer-nav__sublist-item {
+  margin-bottom: 10px;
+}
+
+.footer-nav__sublist-link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 140%;
+  color: #fff;
+  text-decoration: none;
+}
+
+/* дропдаун подвала */
