--- a/style.css
+++ b/style.css
@@ -1397,7 +1397,7 @@ h2 {
 /* lichenion start */
 
 .lichenion {
-  padding: 193px 0 84px 0;
+  padding: 0 0 84px 0;
 }
 
 .lichenion h2 {
@@ -1410,7 +1410,8 @@ h2 {
   border-radius: 12px;
   background: #f8f8fa;
   gap: 41px;
-  padding: 60px 40px 40px 54px;
+  padding: 28px 40px;
+  justify-content: center;
 }
 
 .doc-abs {
@@ -1462,8 +1463,8 @@ h2 {
 .lichenion__right {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  gap: 36px;
+  justify-content: center;
+  gap: 24px;
 }
 
 /* lichenion end */
@@ -3389,11 +3390,6 @@ body.menu-open {
   }
 }
 
-
-
-
-
-
 .tooltip-wrapper {
   position: relative;
   display: inline-block;
@@ -3418,7 +3414,7 @@ body.menu-open {
 }
 
 .tooltip[data-popper-arrow]::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 10px;
   height: 10px;
@@ -3458,22 +3454,6 @@ body.menu-open {
   transition: color 0.2s ease;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .tooltip-wrapper {
   position: relative;
   display: inline-block;
@@ -3511,25 +3491,25 @@ body.menu-open {
 }
 
 [data-popper-arrow]::before {
-  content: '';
+  content: "";
   visibility: visible;
   transform: rotate(45deg);
 }
 
 /* Позиционирование стрелки в зависимости от положения тултипа */
-.tooltip[data-popper-placement^='top'] > [data-popper-arrow] {
+.tooltip[data-popper-placement^="top"] > [data-popper-arrow] {
   bottom: -5px;
 }
 
-.tooltip[data-popper-placement^='bottom'] > [data-popper-arrow] {
+.tooltip[data-popper-placement^="bottom"] > [data-popper-arrow] {
   top: -5px;
 }
 
-.tooltip[data-popper-placement^='left'] > [data-popper-arrow] {
+.tooltip[data-popper-placement^="left"] > [data-popper-arrow] {
   right: -5px;
 }
 
-.tooltip[data-popper-placement^='right'] > [data-popper-arrow] {
+.tooltip[data-popper-placement^="right"] > [data-popper-arrow] {
   left: -5px;
 }
 
@@ -3565,16 +3545,284 @@ body.menu-open {
   transition: color 0.2s ease;
 }
 
-
 .usl-hero__content {
   display: flex;
   flex-direction: column;
 }
 
 .usl-hero {
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
-html, body {
-  overflow-x: hidden;
+.sta-filters {
+  background: #67bec1;
+  padding-top: 45px;
+  padding-bottom: 115px;
+  margin-top: 35px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.sta-filters .header-grid-item a,
+.sta-filters .header-grid-item > :first-child p {
+  color: #fff;
+}
+
+.header-grid-item > :first-child p {
+  text-transform: uppercase;
+}
+
+.sta-filters .header-grid-item > :first-child {
+  border-right: 1px solid #fff;
+}
+
+.sta-filters .header-grid-item > :last-child {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.sta-page__list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 16px;
+}
+
+.sta-page__thumbnail {
+  min-height: 278px;
+}
+
+.sta-page__item {
+  border-radius: 20px;
+  overflow: hidden;
+  background: #f8f8fa;
+}
+
+.sta-page__card-content {
+  padding: 20px 24px;
+}
+
+.sta-page__title {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 140%;
+  color: #333;
+  text-decoration: none;
+  margin-bottom: 12px;
+  display: inline-block;
+}
+
+.sta-page__description {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 160%;
+  color: rgba(0, 0, 0, 0.8);
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 5;
+  overflow: hidden;
+  min-height: 128px;
+}
+
+.sta-page__footer {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  margin-top: 24px;
+}
+
+.sta-page__link {
+  font-weight: 700;
+  font-size: 18px;
+  text-align: center;
+  color: #fff;
+  text-decoration: none;
+  background: #67bec1;
+  border-radius: 8px;
+  padding: 18px 40px;
+}
+
+.sta-page__stats {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.sta-page__stats span {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 120%;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.sta-page__stat {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
+.sta-page h2 {
+  margin-bottom: 42px;
+}
+
+.sta-page {
+  margin-top: 60px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.pagination__list {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+  gap: 24px;
+  align-items: flex-end;
+}
+
+.pagination__link,
+.pagination__separator {
+  font-weight: 600;
+  font-size: 18px;
+  text-align: center;
+  color: #adacac;
+  text-decoration: none;
+}
+
+.pagination__link--active {
+  color: #67bec1;
+}
+
+@media screen and (max-width: 854px) {
+  .sta-filters {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lichenion h2 {
+    margin-bottom: 16px;
+  }
+
+  .lichenion {
+    padding-bottom: 60px;
+    padding-top: 0;
+  }
+
+  .consultation-form {
+    padding-bottom: 60px;
+  }
+
+  .sta-page__thumbnail {
+    min-height: 210px;
+  }
+
+  .sta-page h2 {
+    margin-bottom: 24px;
+  }
+
+  .sta-page {
+    margin-top: 43px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Основной контейнер */
+.custom-dropdown {
+  position: relative;
+  width: 100%; /* Задайте нужную ширину */
+  margin-bottom: 24px;
+}
+
+/* Стили для видимой (выбранной) части */
+.dropdown-selected {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 16px;
+  border: 1px solid #adacac;
+  border-radius: 8px;
+  cursor: pointer;
+  background-color: #fff;
+  transition: border-color 0.2s ease-in-out;
+}
+
+
+
+.arrow {
+  transition: transform 0.3s ease;
+}
+
+.custom-dropdown.open .arrow {
+  transform: rotate(180deg);
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  margin-top: 10px;
+  padding: 0;
+  list-style: none;
+  background-color: #fff;
+  border: 1px solid #adacac;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: none; 
+  z-index: 10;
+}
+
+.custom-dropdown.open .dropdown-menu {
+  display: block; 
+}
+
+.dropdown-menu li {
+  font-weight: 500;
+  font-size: 14px;
+  color: #424242;
+  padding: 12px 24px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.dropdown-menu li:not(:last-child) {
+  border-bottom: 1px solid #adacac;
+}
+
+.dropdown-menu li:hover {
+  background-color: #f0f0f0;
+}
+
+/* Стиль для активного/выбранного элемента */
+.dropdown-menu li.active {
+  background: rgba(103, 190, 193, 0.2);
+  position: relative;
+  padding-left: 35px; /* Место для галочки */
+}
+
+.dropdown-menu li.active::before {
+  content: "";
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-image: url('./images/st.svg');
+  width: 16px;
+  height: 16px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
